added graphing front-end code

--- a/static/html/main.html
+++ b/static/html/main.html
@@ -1,10 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>Harsh Matrix</title>
+    <link rel="stylesheet" type="text/css" href="/css/bootstrap.css">
+    <link rel="stylesheet" type="text/css" href="/css/alchemy.css">
+    <link rel="stylesheet" type="text/css" href="/css/main.css">
 </head>
-<body>
 
+<body>
+<h1>Harsh Matrix</h1>
+<div class="cy" id="cy"></div>
 </body>
+
+<script src="/js/angular.js"></script>
+<script src="/js/d3.js"></script>
+<!--<script src="/js/alchemy.js"></script>-->
+<script src="/js/cytoscape.js"></script>
+<script src="/js/main.js"></script>
 </html>
