--- a/static/html/main.html
+++ b/static/html/main.html
@@ -23,17 +23,22 @@
     <div id="add_form">
         <div id="id-form-group" class="form-group">
             <label>Node ID</label>
-            <input type="text" name="id" class="form-control" placeholder=""
+            <input type="text"
+                   name="id"
+                   class="form-control"
+                   placeholder=""
                    ng-model="add_form_data.id">
         </div>
 
         <!-- edge targets -->
         <div id="edge-target-group" class="form-group">
             <label for="edge_targets">Edge Targets</label>
-            <select name="edge_targets" class="form-control"
+            <select name="edge_targets"
+                    class="form-control"
                     multiple
-                    ng-options="node.data.id for node in nodes track by node.data.id"
-                    ng-model="add_form_data.selected_nodes"></select>
+                    ng-model="add_form_data.selected_nodes"
+                    ng-options="node.data.id for node in nodes track by node.data.id">
+            </select>
         </div>
         <button type="button" ng-click="add_form_btn_click()"
                 class="btn btn-success">Add/Update Node</button>
